--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
                         <a class="nav-link text-white" href="{% url 'profile_view' %}">Profile</a>
                     </li>    
                     <li class="nav-item">
-                        <form method="POST" action="{% url 'logout' %}">
+                        <form method="post" action="{% url 'logout' %}">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-sm btn-outline-light ms-2">Logout</button>
                         </form>
