--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -15,11 +15,6 @@
                         {% csrf_token %}
 
                         <div class="mb-3">
-                            <label for="email" class="form-label">Email</label>
-                            <input type="email" id="email" name="email" class="form-control" value="{{ user.email }}" required>
-                        </div>
-
-                        <div class="mb-3">
                             <label for="first_name" class="form-label">First Name</label>
                             <input type="text" id="first_name" name="first_name" class="form-control" value="{{ user.first_name }}">
                         </div>
@@ -28,6 +23,18 @@
                             <label for="last_name" class="form-label">Last Name</label>
                             <input type="text" id="last_name" name="last_name" class="form-control" value="{{ user.last_name }}">
                         </div>
+
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" id="email" name="email" class="form-control" value="{{ user.email }}" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="phone_number" class="form-label">Phone</label>
+                            <input type="tel" id="phone" name="phone" class="form-control" value="{{ user.phone_number }}" required>
+                        </div>
+
+
+                        
                         <div class="mb-3">
                             <label for="cin" class="form-label">CIN</label>
                             <input type="text" id="cin" name="cin" class="form-control" value="{{ user.cin }}">
